# GL-Speller

./: .gitignore  CMakeLists.txt  README.md  dictionary.txt  main.cpp
checkers/: binaryTreeChecker.cpp  binaryTreeChecker.h  checker.cpp  checker.h  hashTableChecker.cpp  hashTableChecker.h  trieChecker.cpp  trieChecker.h  unorderedMapChecker.cpp  unorderedMapChecker.h  vectorChecker.cpp  vectorChecker.h
data structures/: BST.cpp  BST.h  MurmurHash2.cpp  MurmurHash2.h  trie.cpp  trie.h
include/: binaryTreeChecker.h  hashTableChecker.h  trieChecker.h  unorderedMapChecker.h  vectorChecker.h
outputs/: hashTable\alice.txt
outputs/BST/: holmes.txt  sherlock.txt
outputs/hashTable/: alice.txt  dracula.txt
outputs/stdvector/: alice.txt  dracula.txt  sherlock.txt
outputs/trie/: alice.txt  dracula.txt  holmes.txt  sherlock.txt  tolstoy.txt
outputs/unorderedHashMap/: holmes.txt  tolstoy.txt
src/headers/: checker.h
src/sources/: binaryTreeChecker.cpp  checker.cpp  hashTableChecker.cpp  main.cpp  trieChecker.cpp  unorderedMapChecker.cpp  vectorChecker.cpp
texts/: alice.txt  dracula.txt  sherlock.txt
